--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ cache:
 stages:
     - build and test
     - build release
+    - publish image
 
 jobs:
   include:
@@ -55,3 +56,13 @@ jobs:
           on:
             tags: true
             condition: $GITHUB_TOKEN != ""
+    - stage: publish image
+      if: type = push AND (tag IS present OR branch = master)
+      os: linux
+      dist: xenial
+      before_script:
+        # Decrypt credentials needed to log into gcr registry
+        - openssl aes-256-cbc -K $encrypted_b48f9e852489_key -iv $encrypted_b48f9e852489_iv -in .travis/spire-travis-ci.json.enc -out .travis/spire-travis-ci.json -d
+      script:
+        - make image
+        - .travis/publish-images.sh
